--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-26  version 0.1.17  <s.kondrat@fz-juelich.de>
+
+	* tests/testAtom.cc: bond angle valgrind ok, more tests needed.
+
 2013-08-23  version 0.1.16  <s.kondrat@fz-juelich.de>
 
 	* angle.{cc,h}: bond angles, compiles ok tests needed.
