--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-26  17:30 CET  version 0.1.18  <s.kondrat@fz-juelich.de>
+
+	* tests/point3D.cc: angleBetween(): tests seem ok.
+
 2013-08-26  version 0.1.17  <s.kondrat@fz-juelich.de>
 
 	* tests/testAtom.cc: bond angle valgrind ok, more tests needed.
