--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,6 +1,12 @@
+2013-08-26  18:30 CET  version 0.1.19  <s.kondrat@fz-juelich.de>
+
+	* angle.cc: get angle ok, check atoms ok.
+
+	* point3D.cc: angleBetween(): bugfix.
+
 2013-08-26  17:30 CET  version 0.1.18  <s.kondrat@fz-juelich.de>
 
-	* tests/point3D.cc: angleBetween(): tests seem ok.
+	* point3D.cc: angleBetween(): tests seem ok.
 
 2013-08-26  version 0.1.17  <s.kondrat@fz-juelich.de>
 
