--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,7 @@
+2013-09-09  version 0.1.16  <s.kondrat@fz-juelich.de>
+
+	* analyze-xyz.py: bug fixed (n-k -> n).
+
 2013-08-22  version 0.1.15  <s.kondrat@fz-juelich.de>
 
 	* pdb2str.cc: try/catch block for molecule constructor.
