--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-09-10  version 0.2.1  <s.kondrat@fz-juelich.de>
+
+	* contrib/: directory for various scripts.
+
+2013-09-10  version 0.2.0  <s.kondrat@fz-juelich.de>
+
+	* Release of version 0.2
+
 2013-07-30 3:25 CEST  version 0.0.5  <s.kondrat@fz-juelich.de>
 
 	* tools/:
