--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2013-09-11  version 0.2.3  <s.kondrat@fz-juelich.de>
+
+	* bdbox-xyz.in: scan for xyz files, calculate and average dr2.
+
 2013-09-10 14:30 CEST  version 0.2.2  <s.kondrat@fz-juelich.de>
 
 	* bdbox-run.in: tests ok more options/tests needed.
