--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,8 @@
+2013-10-14  version 0.2.7  <p.burla@fz-juelich.de>
+
+	* bd_flex-run.in: bd_flex wrapper, creates running, interrupted
+	and done files.
+
 2013-10-10  version 0.2.6  <p.burla@fz-juelich.de>
 
 	* bdbox-run.in: -T (placement type) option added .
