Re-run/queue bug fix
scripts/bd_flex-run: bug fix: check for re-run/queue script.

contrib/bd_flex-msub: pass itself to bd_flux-run.

--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-16  version 0.2.13  <s.kondrat@fz-juelich.de>
+
+	* bd_flex-msub.in: pass full itself to bd_flux-run.
+
 2013-10-15 13:15 CEST  version 0.2.12  <s.kondrat@fz-juelich.de>
 
 	* bd_flex-msub.in: job submitter for judge@gz-juelich.de
