--- a/scripts/ChangeLog
+++ b/scripts/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-17  version 0.2.14  <s.kondrat@fz-juelich.de>
+
+	* bdbox-run: insert run number to local file names.
+
 2013-10-16  version 0.2.13  <s.kondrat@fz-juelich.de>
 
 	* bd_flex-run: bug fix: check for re-run/queue script.
