--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-18  version 0.2.15  <s.kondrat@fz-juelich.de>
+
+	* bd_flex-msub.in: create/check queue file.
+
 2013-10-16  version 0.2.13  <s.kondrat@fz-juelich.de>
 
 	* bd_flex-msub.in: pass full itself to bd_flux-run.
