--- a/scripts/ChangeLog
+++ b/scripts/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-18  version 0.2.15  <s.kondrat@fz-juelich.de>
+
+	* bd_flex-run.in: check queue file and save to .queue.info.
+
 2013-10-17  version 0.2.14  <s.kondrat@fz-juelich.de>
 
 	* bdbox-run.in: -b (custom base name) option; insert the run
