tools/analyze-xyz.py: -H (box size), periodic box aware [together with Pradeep].

--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-30  version 0.2.17  <p.burla@fz-juelich.de>  <s.kondrat@fz-juelich.de>
+
+	* analyze-xyz.py: -H (box size), periodic box aware.
+
 2013-10-2  version 0.2.15  <s.kondrat@fz-juelich.de>
 
 	* molsys.cc: -t (number of tries with random placement), -s (str
