--- a/scripts/ChangeLog
+++ b/scripts/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-30  version 0.2.18  <s.kondrat@fz-juelich.de>
+
+	* bdbox-xyz.in: -H (box size) option to be passed to analyze-xyz.py.
+
 2013-10-23 15:00 CEST  version 0.2.17  <s.kondrat@fz-juelich.de>
 
 	* bdbox-run: -a option implemented.
