--- a/scripts/ChangeLog
+++ b/scripts/ChangeLog
@@ -1,3 +1,7 @@
+2013-11-04  version 0.2.19  <s.kondrat@fz-juelich.de>
+
+	* bdbox-xyz.in: -O (overwrite) option (default no for speeding up).
+
 2013-10-30  version 0.2.18  <s.kondrat@fz-juelich.de>
 
 	* bdbox-xyz.in: -H (box size) option to be passed to analyze-xyz.py.
