--- a/scripts/ChangeLog
+++ b/scripts/ChangeLog
@@ -1,3 +1,9 @@
+2013-11-06  version 0.2.20  <s.kondrat@fz-juelich.de>
+
+	* bdbox-run.in: save control files for -c (continue) option.
+
+	* bd_flex-run.in: check for errors and save to error file.
+
 2013-11-04  version 0.2.19  <s.kondrat@fz-juelich.de>
 
 	* bdbox-xyz.in: -O (overwrite) option (default no for speeding up).
