tools/fit-pow.sh: fit the data file with power-law function using gnuplot.

--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,7 @@
+2013-11-07  version 0.2.21  <p.burla@fz-juelich.de> <s.kondrat@fz-juelich.de>
+
+	* fit-pow.sh.in: fit the data file with power function using gnuplot.
+
 2013-11-04  version 0.2.19  <s.kondrat@fz-juelich.de>
 
 	* analyze-xyz.py: try/except for int() for catching broken BD_BOX
