--- a/scripts/ChangeLog
+++ b/scripts/ChangeLog
@@ -1,3 +1,7 @@
+2013-11-12  version 0.2.27  <s.kondrat@fz-juelich.de>
+
+	* bdbox-xyz: -i INTERVAL option for fitting.
+
 2013-11-12  version 0.2.26  <s.kondrat@fz-juelich.de>
 
 	* bdbox-xyz: scan_directory() top down, check files timestamp.
