--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,3 +1,9 @@
+2013-11-22  version 0.2.28  <s.kondrat@fz-juelich.de>
+
+	* system.cc: printInfo(): save molecule size. 
+
+	* molecule.h: Molecule: getSize() method.
+
 2013-10-22  version 0.2.15  <s.kondrat@fz-juelich.de>
 
 	* molecule.cc system.cc: save more info (volume, packing fraction
