--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,3 +1,11 @@
+2013-12-02  version 0.2.29  <pradeepburla91@gmail.com>
+
+	* moleculeAddAtom.cc: createBond(),
+	
+	* molecule.{cc,h}: hasAtom(),getAtom()
+	
+	* bond.{cc,h}: additional constructor
+
 2013-11-22  version 0.2.28  <s.kondrat@fz-juelich.de>
 
 	* system.cc: printInfo(): save molecule size. 
