bdbox-xyz, average-me.py: too many args workaround.

--- a/scripts/ChangeLog
+++ b/scripts/ChangeLog
@@ -1,3 +1,8 @@
+2013-12-10  version 0.2.29  <s.kondrat@fz-juelich.de>
+
+	* bdbox-xyz: check max argumets and use -F option to
+	average-me.py if too many.
+
 2013-11-13  version 0.2.28  <s.kondrat@fz-juelich.de>
 
 	* bdbox-xyz: -k regexp as [k1-kn],km.
