--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 BCP Tool is a set of tools for running and analysing Brownian Dynamics Simulations with BD_BOX. What means BCP has been forgotten.
 
-This library is a part of REDICON, REaction DIffusion systems via DIscrete-CONtinuous modelling (Olav Zimmermann)
+This library is a part of REDICON, REaction DIffusion systems via DIscrete-CONtinuous modelling (name proposed by Olav Zimmermann)
 
 BCP Tools consist of 
 
